welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:77: error: Unmatched closing brace '}' ignored here
}
^PictureMono3:83: error: eof expected but '}' found.
}
^